cambie la nb de chris

--- a/dmcyt_tp1.ipynb
+++ b/dmcyt_tp1.ipynb
@@ -20,11 +20,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "659bddd0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "vemos un cambio\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"vemos un cambio\")"
+   ]
   }
  ],
  "metadata": {
