características datasets. todo con mi #sil

--- a/DMCyT_sil_tutorial_Datasets_TP1_2025.ipynb
+++ b/DMCyT_sil_tutorial_Datasets_TP1_2025.ipynb
@@ -121,7 +121,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 3,
       "metadata": {
         "id": "ZEGBDSHnru1p"
       },
@@ -158,7 +158,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 4,
       "metadata": {
         "id": "ygtXVQ2aK9Bo"
       },
@@ -173,7 +173,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -221,13 +221,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "bUsiGr4FWkUA"
       },
       "outputs": [],
       "source": [
         "#calcular eficientemente en grafos muy grandes aproximación a distancias mínimas medias, $<d>$**\n",
+        "#sil: esta función no la vamos a usar no necesitamos samplear (borren si ok)\n",
         "\n",
         "def sample_path_lengths(G, nodes=None, trials=1000):   #solo para redes muy grandes calcula la media entre una cantidad limitada de pares porque entre miles no tendría sentido.\n",
         "    if nodes is None:\n",
@@ -255,7 +256,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 18,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -268,7 +269,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Terrorist (unweighted)\n",
+            "Terrorist Unweighted)\n",
             "Graph with 64 nodes and 243 edges\n",
             "Es dirigido?: False\n",
             "Es pesado?: False\n",
@@ -280,7 +281,8 @@
       "source": [
         "TerroristUnweighted = terr.copy()\n",
         "drop_weights(TerroristUnweighted)\n",
-        "print('Terrorist (unweighted)')\n",
+        "TerroristUnweighted.remove_edges_from(nx.selfloop_edges(TerroristUnweighted)) #remuevo autoenlaces NO HAY\n",
+        "print('Terrorist Unweighted)')\n",
         "print(TerroristUnweighted)\n",
         "print('Es dirigido?:',nx.is_directed(TerroristUnweighted))\n",
         "print('Es pesado?:',nx.is_weighted(TerroristUnweighted))\n",
@@ -290,7 +292,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -310,14 +312,14 @@
       "source": [
         "#leer los labels del dataset email\n",
         "\n",
-        "array = np.loadtxt('datasets/email-Eu-core-department-labels.txt', dtype=int)\n",
+        "array = np.loadtxt('datasets/email_labels.txt', dtype=int)\n",
         "labelsEmail=list(array[:,1])\n",
         "print(labelsEmail) # es una lista del label para cada nodo (por ej. el nodo 3 pertenece al departamento 21"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2584,10 +2586,97 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 24,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "emailGiant Grado promedio <k>: 32.58\n",
+            "emailGiant Nodo con grado máximo: 160 con k_max = 345\n",
+            "emailGiant Nodo con grado mínimo: 449 con k_min = 1\n",
+            "emailGiant: el nodo con mayor grado es el 160, que posee 345 enlaces\n",
+            "emailGiant Coeficiente de clustering promedio <C>: 0.41\n",
+            "La distancia media de la componente gigante de emailEU es: 2.59\n",
+            "emailGiant Eficiencia global: 0.42\n"
+          ]
+        }
+      ],
+      "source": [
+        "#SIL emailEU\n",
+        "\n",
+        "degrees_emailGiant = [d for n, d in emailGiant.degree()]\n",
+        "\n",
+        "k_promedio_emailGiant = round(sum(degrees_emailGiant) / len(degrees_emailGiant), 2)\n",
+        "print(\"emailGiant Grado promedio <k>:\", k_promedio_emailGiant)\n",
+        "\n",
+        "nodo_max_emailGiant, k_max_emailGiant = max(emailGiant.degree(), key=lambda x: x[1])\n",
+        "print(\"emailGiant Nodo con grado máximo:\", nodo_max_emailGiant, \"con k_max =\", k_max_emailGiant)\n",
+        "nodo_min_emailGiant, k_min_emailGiant = min(emailGiant.degree(), key=lambda x: x[1])\n",
+        "print(\"emailGiant Nodo con grado mínimo:\", nodo_min_emailGiant, \"con k_min =\", k_min)\n",
+        "\n",
+        "sortedNodes_emailGiant = sorted(emailGiant.degree, key=lambda x: x[1], reverse=True) #lista ordenada de tuplas nodo, grado, x[1] es el grado\n",
+        "print(f'emailGiant: el nodo con mayor grado es el {sortedNodes_emailGiant[0][0]}, que posee {sortedNodes_emailGiant[0][1]} enlaces' ) #0 0 es tupla 0 posición 0\n",
+        "\n",
+        "C_emailGiant = round(nx.average_clustering(emailGiant), 2)\n",
+        "print(\"emailGiant Coeficiente de clustering promedio <C>:\", C_emailGiant)\n",
+        "\n",
+        "d_media_emailGiant = round(nx.average_shortest_path_length(emailGiant),2)\n",
+        "print(\"La distancia media de la componente gigante de emailEU es:\", d_media_emailGiant)\n",
+        "\n",
+        "efficiency_emailGiant = round(nx.global_efficiency(emailGiant),2)\n",
+        "print(\"emailGiant Eficiencia global:\", efficiency_emailGiant)\n",
+        "\n",
+        "# falta distribución de grado (estoy en eso)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {},
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "TerroristUnweighted Grado promedio <k>: 32.58\n",
+            "TerroristUnweighted Nodo con grado máximo: 0 con k_max = 29\n",
+            "TerroristUnweighted Nodo con grado mínimo: 34 con k_min = 1\n",
+            "TerroristUnweighted: el nodo con mayor grado es el 0, que posee 29 enlaces\n",
+            "TerroristUnweighted Coeficiente de clustering promedio <C>: 0.62\n",
+            "La distancia media de Terrorist (sin pesos) es: 2.69\n",
+            "TerroristUnweighted Eficiencia global: 0.45\n"
+          ]
+        }
+      ],
+      "source": [
+        "#SIL terroristas\n",
+        "\n",
+        "degrees_TerroristUnweighted = [d for n, d in TerroristUnweighted.degree()]\n",
+        "\n",
+        "k_promedio_TerroristUnweighted = round(sum(degrees) / len(degrees), 2)\n",
+        "print(\"TerroristUnweighted Grado promedio <k>:\", k_promedio_TerroristUnweighted)\n",
+        "\n",
+        "nodo_max_TerroristUnweighted, k_max_TerroristUnweighted = max(TerroristUnweighted.degree(), key=lambda x: x[1])\n",
+        "print(\"TerroristUnweighted Nodo con grado máximo:\", nodo_max_TerroristUnweighted, \"con k_max =\", k_max_TerroristUnweighted)\n",
+        "nodo_min_TerroristUnweighted, k_min_TerroristUnweighted = min(TerroristUnweighted.degree(), key=lambda x: x[1])\n",
+        "print(\"TerroristUnweighted Nodo con grado mínimo:\", nodo_min_TerroristUnweighted, \"con k_min =\", k_min_TerroristUnweighted)\n",
+        "\n",
+        "sortedNodes_TerroristUnweighted = sorted(TerroristUnweighted.degree, key=lambda x: x[1], reverse=True) #lista ordenada de tuplas nodo, grado, x[1] es el grado\n",
+        "print(f'TerroristUnweighted: el nodo con mayor grado es el {sortedNodes_TerroristUnweighted[0][0]}, que posee {sortedNodes_TerroristUnweighted[0][1]} enlaces' ) #0 0 es tupla 0 posición 0\n",
+        "\n",
+        "C_TerroristUnweighted = round(nx.average_clustering(TerroristUnweighted), 2)\n",
+        "print(\"TerroristUnweighted Coeficiente de clustering promedio <C>:\", C_TerroristUnweighted)\n",
+        "\n",
+        "d_media_TerroristUnweighted = round(nx.average_shortest_path_length(TerroristUnweighted),2)\n",
+        "print(\"La distancia media de Terrorist (sin pesos) es:\", d_media_TerroristUnweighted)\n",
+        "\n",
+        "efficiency_TerroristUnweighted = round(nx.global_efficiency(TerroristUnweighted),2)\n",
+        "print(\"TerroristUnweighted Eficiencia global:\", efficiency_TerroristUnweighted)\n",
+        "\n",
+        "# falta distribución de grado (estoy en eso)"
+      ]
     }
   ],
   "metadata": {
